--- a/WebContent/sam/reportes/ordendepago_CFE.jrxml
+++ b/WebContent/sam/reportes/ordendepago_CFE.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="orden de pago" pageWidth="792" pageHeight="612" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.4641000000000006"/>
-	<property name="ireport.x" value="122"/>
+	<property name="ireport.x" value="167"/>
 	<property name="ireport.y" value="74"/>
 	<parameter name="OP_VOBO_REPRESENTANTE" class="java.lang.String"/>
 	<parameter name="OP_VOBO_CARGO" class="java.lang.String"/>
@@ -573,7 +573,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="8"/>
 				</textElement>
-				<text><![CDATA[704]]></text>
+				<text><![CDATA[904]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -863,7 +863,7 @@
 				<textElement textAlignment="Center">
 					<font size="8" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<text><![CDATA[El titular del ramo]]></text>
+				<text><![CDATA[Autorizó]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="565" y="77" width="92" height="21"/>
@@ -959,7 +959,7 @@
 					<rightPen lineWidth="1.0"/>
 				</box>
 				<textField>
-					<reportElement x="189" y="-1" width="95" height="20"/>
+					<reportElement x="190" y="0" width="95" height="19"/>
 					<box>
 						<rightPen lineWidth="1.0"/>
 					</box>
