Actualizacion y correccion del modulo de contratos y vales
Modificaciones de contratos y vales para la parte de captura de refrendos

--- a/WebContent/include/css/bootstrap2.css
+++ b/WebContent/include/css/bootstrap2.css
@@ -334,14 +334,14 @@ fieldset[disabled] .btn-asignar.focus {
 .btn-imprimir:hover {
   color: #fff;
   background-color: #b11365;/**/
-  border-color: #c3327e;/*PHANTON AZUL*/
+  border-color: #122b40;/*PHANTON AZUL*/
 }
 .btn-imprimir:active,
 .btn-imprimir.active,
 .open > .dropdown-toggle.btn-imprimir {
   color: #fff;
   background-color: #b11365;
-  border-color: #c3327e;
+  border-color: #122b40;
 }
 .btn-imprimir:active:hover,
 .btn-imprimir.active:hover,
